--- a/back/.gitignore
+++ b/back/.gitignore
@@ -31,3 +31,9 @@ tmp/storage/*
 
 # Ignore master key for decrypting credentials and more.
 config/master.key
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+
+/config/credentials/development.key
