--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.2"
+    "react-hook-form": "^7.51.2",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
