--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "next": "14.1.4",
+    "next-intl": "^3.11.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
